--- a/index.html
+++ b/index.html
@@ -7,8 +7,87 @@
     <title>Virtual keyboard</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+<body class="body">
+    <!-- <main class="container">
+        <h1 class="title">Virtual keyboard</h1>
+        <textarea class="textarea" id="textarea" rows="5" cols="50"></textarea>
+        <div class="keyboard">
+            <div class="keyboard__row">
+                <div class="keyboard__key key backqoute">`</div>
+                <div class="keyboard__key key 1">1</div>
+                <div class="keyboard__key key 2">2</div>
+                <div class="keyboard__key key 3">3</div>
+                <div class="keyboard__key key 4">4</div>
+                <div class="keyboard__key key 5">5</div>
+                <div class="keyboard__key key 6">6</div>
+                <div class="keyboard__key key 7">7</div>
+                <div class="keyboard__key key 8">8</div>
+                <div class="keyboard__key key 9">9</div>
+                <div class="keyboard__key key 0">0</div>
+                <div class="keyboard__key key minus">-</div>
+                <div class="keyboard__key key equal">=</div>
+                <div class="keyboard__key backspace">backspace</div>
+            </div>
+            <div class="keyboard__row">
+                <div class="keyboard__key tab">tab</div>
+                <div class="keyboard__key key q">q</div>
+                <div class="keyboard__key key w">w</div>
+                <div class="keyboard__key key e">e</div>
+                <div class="keyboard__key key r">r</div>
+                <div class="keyboard__key key t">t</div>
+                <div class="keyboard__key key y">y</div>
+                <div class="keyboard__key key u">u</div>
+                <div class="keyboard__key key i">i</div>
+                <div class="keyboard__key key o">o</div>
+                <div class="keyboard__key key p">p</div>
+                <div class="keyboard__key key bracket-left">[</div>
+                <div class="keyboard__key key bracket-right">]</div>
+                <div class="keyboard__key key blackslash">\</div>
+                <div class="keyboard__key del">del</div>
+            </div>
+            <div class="keyboard__row">
+                <div class="keyboard__key capslock">CapsLock</div>
+                <div class="keyboard__key key a">a</div>
+                <div class="keyboard__key key s">s</div>
+                <div class="keyboard__key key d">d</div>
+                <div class="keyboard__key key f">f</div>
+                <div class="keyboard__key key g">g</div>
+                <div class="keyboard__key key h">h</div>
+                <div class="keyboard__key key j">j</div>
+                <div class="keyboard__key key k">k</div>
+                <div class="keyboard__key key l">l</div>
+                <div class="keyboard__key key semicolon">;</div>
+                <div class="keyboard__key key qoute">'</div>
+                <div class="keyboard__key enter">enter</div>
+            </div>
+            <div class="keyboard__row">
+                <div class="keyboard__key shift-left">shift</div>
+                <div class="keyboard__key key z">z</div>
+                <div class="keyboard__key key x">x</div>
+                <div class="keyboard__key key c">c</div>
+                <div class="keyboard__key key v">v</div>
+                <div class="keyboard__key key b">b</div>
+                <div class="keyboard__key key n">n</div>
+                <div class="keyboard__key key m">m</div>
+                <div class="keyboard__key key comma">,</div>
+                <div class="keyboard__key key dot">.</div>
+                <div class="keyboard__key key slash">/</div>
+                <div class="keyboard__key arrow-up">▲</div>
+                <div class="keyboard__key shift-right">shift</div>
+            </div>
+            <div class="keyboard__row">
+                <div class="keyboard__key ctrl-left">ctrl</div>
+                <div class="keyboard__key win">win</div>
+                <div class="keyboard__key alt-left">alt</div>
+                <div class="keyboard__key space key"></div>
+                <div class="keyboard__key alt-right">alt</div>
+                <div class="keyboard__key arrow-left">◄</div>
+                <div class="keyboard__key arrow-down">▼</div>
+                <div class="keyboard__key arrow-right">►</div>
+                <div class="keyboard__key ctrl-right">ctrl</div>
+            </div>
+        </div>
+    </main> -->
     <script src="index.js"></script>
 </body>
 </html>
